--- a/stonks-env/pyvenv.cfg
+++ b/stonks-env/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = /usr/bin
+home = C:\Users\aluno\AppData\Local\Programs\Python\Python313
 include-system-site-packages = false
-version = 3.10.12
+version = 3.13.1
+executable = C:\Users\aluno\AppData\Local\Programs\Python\Python313\python.exe
+command = C:\Users\aluno\AppData\Local\Programs\Python\Python313\python.exe -m venv C:\Users\aluno\Desktop\stonksviewer\stonks-viewer\stonks-env
